--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-zcash_swapfile_size: 1G
-zcash_vm_swappiness: 1
-zcash_common_packages:
+koto_swapfile_size: 1G
+koto_vm_swappiness: 1
+koto_common_packages:
   - apt-show-versions
   - apt-transport-https
   - curl
