--- a/roles/common/tasks/update_everything.yml
+++ b/roles/common/tasks/update_everything.yml
@@ -38,6 +38,7 @@
   tags: apt
 
 - name: Remove unneeded packages.
-  apt:
-    autoremove: yes
+  command: apt-get autoremove -y
+  register: autoremove_result
+  changed_when: "'0 upgraded' not in autoremove_result.stdout"
   tags: apt
