--- a/roles/gitian/meta/main.yml
+++ b/roles/gitian/meta/main.yml
@@ -1,15 +1,15 @@
 ---
 galaxy_info:
-  author: Kevin Gallagher (@ageis)
-  description: Sets up a deterministic Gitian builder VM for Koto.
-  company: Koto
+  author: Kevin Gallagher (@ageis) Kent Sommer (@kentsommer) Kirill Orlov (@charlesrocket) and Jonathan Leto (@leto)
+  description: Sets up a deterministic Gitian builder VM for AXE.
+  company: AXE
   galaxy_tags: []
   license: GPLv2
-  min_ansible_version: 2.1.2
+  min_ansible_version: 2.6.4
   platforms:
-    - name: Debian
+    - name: Ubuntu
       versions:
-      - jessie
+      - bionic
   categories:
     - system
 dependencies: []
