--- a/roles/gitian/tasks/main.yml
+++ b/roles/gitian/tasks/main.yml
@@ -20,15 +20,25 @@
     - bridge-utils
     - curl
     - debootstrap
-    - git-core
+    - git
     - gnupg2
     - kpartx
     - lintian
     - make
+    - parted
     - python-cheetah
     - qemu-utils
     - ruby
     - sudo
+
+- name: Create Bionic link
+  file:
+    src: /usr/share/debootstrap/scripts/gutsy
+    dest: /usr/share/debootstrap/scripts/bionic
+    state: link
+  with_items:
+    - new
+    - vmdev
 
 - name: Set up the Gitian build user with sudo.
   user:
@@ -107,19 +117,6 @@
     group: root
     mode: "0644"
 
-- name: Set up jessie-backports.
-  apt_repository:
-    repo: 'deb http://httpredir.debian.org/debian/ jessie-backports main'
-    state: present
-
-- name: Install updated version of LXC.
-  apt:
-    name: lxc
-    state: latest
-    default_release: jessie-backports
-    update_cache: yes
-    cache_valid_time: 3600
-
 - name: Clone git repository for Gitian builder.
   git:
     repo: "{{ gitian_builder_url }}"
@@ -128,7 +125,7 @@
     force: yes
   become_user: "{{ gitian_user }}"
 
-- include_tasks: keys.yml
+- include: keys.yml
   tags: keys
 
 - name: Clone git repository for Koto.
@@ -169,7 +166,7 @@
 
 - name: Wait extra time for VM to come back up.
   pause:
-    seconds: 10
+    seconds: 60
 
 - name: Set Git username.
   command: "git config --global user.name '{{ git_name }}'"
@@ -181,8 +178,8 @@
 
 - name: Copy Gitian build script.
   template:
-    src: gitian-build.sh
-    dest: "/home/{{ gitian_user }}/gitian-build.sh"
+    src: gitian-build.py
+    dest: "/home/{{ gitian_user }}/gitian-build.py"
     owner: "{{ gitian_user }}"
     group: "{{ gitian_user }}"
     mode: "0755"
@@ -190,35 +187,52 @@
 
 - name: Check for presence of Gitian LXC image.
   stat:
-    path: "/home/{{ gitian_user }}/gitian-builder/base-jessie-amd64"
+    path: "/home/{{ gitian_user }}/gitian-builder/base-bionic-amd64"
   register: gitian_lxc_image
 
-- name: Set up the Gitian LXC image.
-  shell: "source ~/.profile && /home/{{ gitian_user }}/gitian-builder/bin/make-base-vm --lxc --arch amd64 --distro debian --suite jessie"
-  when: gitian_lxc_image.stat.exists == false
+- name: Ensure group "docker" exists
+  group:
+    name: docker
+    state: present
+    system: yes
+
+- name: Execute Docker without sudo
+  shell: sh -c "sudo usermod -aG docker vagrant"
   become: yes
-  become_user: "{{ gitian_user }}"
-  args:
-    chdir: "/home/{{ gitian_user }}/gitian-builder"
-    executable: /bin/bash
+  become_user: vagrant
+  become_method: sudo
 
 - name: Clean the apt cache to free up space.
-  apt:
-    autoclean: yes
+  command: apt-get autoclean
+  register: autoclean_result
+  changed_when: "'Del' in autoclean_result.stdout"
 
-- include_tasks: gpg.yml
+- include: gpg.yml
   tags: gpg
   become: no
   when: gpg_key_id is defined and gpg_key_id != ''
 
-- include_tasks: ssh.yml
+- include: ssh.yml
   tags: ssh
   become: no
   when: ssh_key_name is defined and ssh_key_name != ''
+
+- file:
+    path: "gitian-builder/inputs"
+    state: directory
+    recurse: yes
+    owner: vagrant
+
+- name: Copy Apple SDK
+  copy:
+    src: MacOSX10.11.sdk.tar.gz
+    dest: gitian-builder/inputs/MacOSX10.11.sdk.tar.gz
+    owner: vagrant
+  ignore_errors: yes
 
 - name: Display help message.
   debug:
     msg: >-
       Finished bootstrapping the Gitian host VM!
       To enter the environment, run `vagrant ssh koto-build`
-      and then use `./gitian-build.sh` to kick off a build.
+      and then use `./gitian-build.py` to kick off a build.
