--- a/gitian.yml
+++ b/gitian.yml
@@ -9,11 +9,11 @@
   vars:
     koto_git_repo_url: https://github.com/KotoDevelopers/koto
     koto_version: develop
-    gpg_key_name: 'wo'
-    git_name: 'WO'
-    git_email: 'wo@ko-to.org'
-    gpg_key_id: '' #8BCABC42AC606C7311775A63FD04BBFAD00AFDDE' # optional
-    ssh_key_name: 'id_ecdsa' # optional
+    gpg_key_name: ''
+    git_name: ''
+    git_email: ''
+    gpg_key_id: '' # optional
+    ssh_key_name: '' # optional
   roles:
     - role: common
       tags: common
